@@ -62,7 +62,7 @@ if ($_POST) {
 	if (($_POST['domain'] && !is_domain($_POST['domain']))) {
 		$input_errors[] = "A valid domain must be specified.";
 	}
-	if (($_POST['ip'] && !is_ipaddr($_POST['ip']))) {
+	if (($_POST['ip'] && !is_ipaddr4or6($_POST['ip']))) {
 		$input_errors[] = "A valid IP address must be specified.";
 	}
 
